# wolf3d

./: .gitignore  CMakeLists.txt  Makefile  Makefileold  author  map  map-clear.txt  map.txt  map1.txt  oldmf
SDL2/: Makefile  Makefile.rules  config.status  configure  libtool  sdl2-config  sdl2-config.cmake  sdl2.pc
SDL2_ttf/: Makefile  config.status  glfont  libtool  showfont
SDL_image/: .hg_archival.txt
includes/: algebra.h  animations.h  bmp_parser.h  constants.h  door.h  engine.h  events.h  fdf.h  help.h  image.h  opendir.h  player.h  prender.h  sdl.h  sprites.h  wolf3d.h
libft/: Makefile  ft_2arrclean.c  ft_atoi.c  ft_bzero.c  ft_count_lines.c  ft_count_words.c  ft_countwords.c  ft_intsplitstr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_iswsp.c  ft_itoa.c  ft_line_len.c  ft_lst_rev.c  ft_lstadd.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putdbl.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  (+39 more)
maps/: 1  all_txtr.wolf3d  big_invalid.wolf3d  big_valid.wolf3d  cube.txt  cube2.txt  empty.wolf3d  map-new.txt  map.txt  map.wolf3d  map_z.wolf3d  mapy.txt  mapz copy.txt  mapz.txt  new_template.nnmp  small_invalid.wolf3d  small_valid.wolf3d  template.nmp  template2.nmp  very_big.wolf3d  zero.wolf3d
src/: alg_wu.c  alg_wu_color.c  alg_wu_draw.c  animation.c  bmp_parser.c  check_map.c  debug.c  door.c  draw_walls.c  enemies.c  (+42 more)
(+31 files in other folders)
